# lambda-cdm-raytracing

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: config.h.in
examples/: 2lpt_test.cpp  CMakeLists.txt  barnes_hut_test.cu  basic_lambda_cdm.json  basic_simulation  basic_simulation.cpp  cosmology_test.cpp  cuda_nbody_test  cuda_nbody_test.cpp  simple_force_test.cu  zeldovich_test.cpp
include/analysis/: halo_finder.hpp  power_spectrum.hpp
include/core/: component_registry.hpp  configuration_manager.hpp  interfaces.hpp  math_types.hpp  resource_manager.hpp  simulation_context.hpp  simulation_engine.hpp
include/forces/: barnes_hut_tree.hpp  force_computer_factory.hpp  tree_force_computer.hpp
include/mpi/: cluster_comm.hpp
include/physics/: cosmology_model.hpp  initial_conditions.hpp  lambda_cdm.hpp  lambda_cdm_kernels.hpp
include/tensorrt/: nbody_engine.hpp  nbody_plugins.hpp
scripts/: setup_development.sh
src/: CMakeLists.txt  lambda_cdm_sim  main.cpp
src/analysis/: halo_finder.cpp  power_spectrum.cu
src/core/: component_registry.cpp  configuration_manager.cpp  simulation_context.cpp  simulation_engine.cpp
src/forces/: barnes_hut_tree.cu  force_computer_factory.cpp  tree_force_computer.cpp
src/mpi/: cluster_comm.cpp  domain_decomposition.cpp
src/physics/: cosmology_model.cpp  initial_conditions.cpp  lambda_cdm.cu  lambda_cdm_impl.cu  lambda_cdm_kernels.cu
src/tensorrt/: nbody_engine.cpp  nbody_plugins.cu
